[package]
name = "zstd-streaming-reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "Url",
    "console",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }
zstd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
debug = true

[profile.dev]
opt-level = 0
debug = true
